💄 Adding tailwind custom values

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,12 @@
   --font-mono: var(--font-geist-mono);
 }
 
+@theme{
+   --custom-inset: inset 2px 2px rgb(206, 206, 206), inset -2px -2px gray;
+   --custom-inset-type : inset 2px 2px rgb(40, 40, 40),inset -2px -2px rgb(226, 226, 226);
+   --custom-inset-button : inset 2px 2px rgb(236, 236, 236),inset -2px -2px rgb(0, 0, 0)
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
