Adding content + cleaning infra

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@
 }
 
 @theme{
+   --grey:  rgb(192,192,192);
    --custom-inset: inset 2px 2px rgb(206, 206, 206), inset -2px -2px gray;
    --custom-inset-type : inset 2px 2px rgb(40, 40, 40),inset -2px -2px rgb(226, 226, 226);
    --custom-inset-button : inset 2px 2px rgb(236, 236, 236),inset -2px -2px rgb(0, 0, 0)
@@ -29,4 +30,8 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.wallpaperWin98{
+  animation-duration: 7s; /* don't forget to set a duration! */
 }
